--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,24 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_new"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher_new_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CryptoChecker"
         tools:targetApi="31">
         <service
-            android:name=".CryptoAlarmService"
+            android:name=".services.CryptoAlarmService"
+            android:enabled="true"
+            android:excludeFromRecents="true"
+            android:exported="false"
+            android:launchMode="singleTask"
+            android:parentActivityName=".MainActivity"
+            android:taskAffinity=""
+            android:theme="@style/Theme.CryptoChecker" />
+
+        <service
+            android:name=".services.AlertBinanceService"
             android:enabled="true"
             android:excludeFromRecents="true"
             android:exported="false"
